@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.common.last.fm"
        name="Last.FM"
-       version="1.0.4"
+       version="1.1.0"
        provider-name="Team XBMC">
   <requires>
     <import addon="xbmc.metadata" version="1.0"/>
@@ -16,20 +16,22 @@
     <summary lang="es">Scraper de música de LastFM</summary>
     <summary lang="fr">Scraper LastFM</summary>
     <summary lang="hu">LastFM leolvasó-könyvtár</summary>
-    <summary lang="nl">LastFM Scraper Collectie</summary>
-    <summary lang="pl">Scraper LastFM</summary>
+    <summary lang="nl">LastFM-scraperfuncties</summary>
+    <summary lang="pl">Scraper biblioteki LastFM</summary>
     <summary lang="pt">Scraper de música LastFM</summary>
     <summary lang="ru">Обработчик для LastFM</summary>
+    <summary lang="se">Skrapebibliotek för LastFM</summary>
     <summary lang="zh">LastFM刮削器代码库</summary>
     <description lang="en">Download Music information from www.last.fm</description>
     <description lang="de">Downloade Musik informationen von www.last.fm</description>
     <description lang="es">Descargar información musical de www.last.fm</description>
     <description lang="fr">Télécharge les infos musicales depuis www.last.fm</description>
     <description lang="hu">Zene információk letöltése a www.last.fm webhelyről</description>
-    <description lang="nl">Download muziek informatie</description>
+    <description lang="nl">Muziekinfo ophalen van LastFM</description>
     <description lang="pl">Pobieraj informacje o muzyce z www.last.fm</description>
     <description lang="pt">Descarregar informação de música de www.last.fm</description>
     <description lang="ru">Загружать информацию о Музыке с www.last.fm</description>
+    <description lang="se">Ladda ner musikinformation från www.last.fm</description>
     <description lang="zh">从www.last.fm下载音乐信息</description>
   </extension>
 </addon>
