@@ -12,17 +12,22 @@
 			<expression noclean="1"/>
 		</RegExp>
 	</ParseLastFMDiscography>
-	<GetLastFMArtistThumbs dest="5">
-		<RegExp input="$$1" output="&lt;details&gt;&lt;url function=&quot;ParseLastFMArtistThumbs&quot;&gt;http://ws.audioscrobbler.com/2.0/?method=artist.getimages&amp;amp;artist=\1&amp;amp;api_key=71e468a84c1f40d4991ddccc46e40f1b&lt;/url&gt;&lt;/details&gt;" dest="5">
-			<expression noclean="1"/>
+	<GetLastFMArtistThumbsByID dest="5">
+		<RegExp input="$$1" output="&lt;details&gt;&lt;url function=&quot;ParseLastFMArtistThumbs&quot;&gt;http://ws.audioscrobbler.com/2.0/?method=artist.getimages&amp;mbid=\1&amp;api_key=71e468a84c1f40d4991ddccc46e40f1b&lt;/url&gt;&lt;/details&gt;" dest="5">
+			<expression noclean="1" />
 		</RegExp>
-	</GetLastFMArtistThumbs>
+	</GetLastFMArtistThumbsByID>
+	<GetLastFMArtistThumbsByName dest="5">
+		<RegExp input="$$1" output="&lt;details&gt;&lt;url function=&quot;ParseLastFMArtistThumbs&quot;&gt;http://ws.audioscrobbler.com/2.0/?method=artist.getimages&amp;artist=\1&amp;api_key=71e468a84c1f40d4991ddccc46e40f1b&lt;/url&gt;&lt;/details&gt;" dest="5">
+			<expression noclean="1" />
+		</RegExp>
+	</GetLastFMArtistThumbsByName>
 	<ParseLastFMArtistThumbs dest="5">
-		<RegExp input="$$2" output="&lt;details&gt;\1&lt;/details&gt;" dest="5">
-			<RegExp input="$$1" output="&lt;thumb&gt;\1&lt;/thumb&gt;" dest="2">
-				<expression noclean="1" repeat="yes">&lt;size name=&quot;original&quot;[^&gt;]*&gt;([^&lt;]*)&lt;/size&gt;</expression>
+		<RegExp input="$$6" output="&lt;details&gt;\1&lt;/details&gt;" dest="5">
+			<RegExp input="$$1" output="&lt;thumb preview=&quot;\2&quot;&gt;\1&lt;/thumb&gt;" dest="6">
+				<expression repeat="yes" noclean="1">&lt;size name="original"[^&gt;]*&gt;([^&lt;]*)&lt;[^&lt;]*&lt;size name="large"[^&gt;]*&gt;([^&lt;]*)&lt;</expression>
 			</RegExp>
-			<expression noclean="1"></expression>
+			<expression noclean="1">(.+)</expression>
 		</RegExp>
 	</ParseLastFMArtistThumbs>
 	<GetLastFMAlbumThumbs dest="5">
@@ -40,5 +45,5 @@
 			</RegExp>
 			<expression noclean="1"></expression>
 		</RegExp>
-	</ParseLastFMAlbumThumbs>	
+	</ParseLastFMAlbumThumbs>
 </scraperfunctions>
