@@ -3,6 +3,6 @@
     <string id="30000">Usar ordem do DVD</string>
     <string id="30001">Usar ordem absoluta (Temporada única)</string>
     <string id="30002">Ligar Fanart</string>
-    <string id="30003">Preferir posters</string>
-    <string id="30004">Linguagem</string>
+    <string id="30003">Preferir pósters</string>
+    <string id="30004">Lingua</string>
 </strings>
